<resources>
    <string name="app_name" translatable="false">Rocket Labyrinth</string>

    <string name="marathon_header">CHOOSE MODE</string>

    <string name="easy_marathon_button">Easy</string>
    <string name="medium_marathon_button">Medium</string>
    <string name="hard_marathon_button">Hard</string>
    <string name="insane_marathon_button">Insane</string>

    <string name="quit_game_process_button">QUIT</string>
    <string name="save_game_button">SAVE</string>
    <string name="game_saved_toast">Game Saved</string>

    <string name="new_game_button">new game</string>
    <string name="continue_game_button">continue</string>
    <string name="level_number">Level: %d</string>

</resources>
