<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_game"
    tools:context=".activities.MainMenuActivity">

    <TextView
        android:id="@+id/main_menu_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/Button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game_button"
        style="@style/Button"
        android:onClick="onClick"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@id/main_menu_header"
        android:layout_alignEnd="@id/main_menu_header" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_game_button"
        style="@style/Button"
        android:onClick="onClick"
        android:layout_below="@+id/button_new_game"
        android:layout_alignStart="@id/main_menu_header"
        android:layout_alignEnd="@id/main_menu_header"/>
</RelativeLayout>